--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,5 @@
 <section class="Cards CardsContainer">
   <% @users.each do |user| %>
-    <%= link_to user do %>
-      <div  class="CardWrap">
-        <div class="Card">
-          <div class="CardBg" style="background-image:url(<%= user.avatar.medium_avatar  %>)"></div>
-          <div class="CardInfo flex items-end">
-            <h1><%= user.name %></h1>
-          </div>
-        </div>
-      </div>
-    <% end %>
+    <%= render 'users/card', user: user %>
   <% end %>
 </section>
