--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -62,7 +62,27 @@ label{
 .Modal h1{
   margin: 0.3em 0;
 }
-
+.tabs{
+  background: #74ccd1;
+  padding: 0.3em;
+  color: #FFF;
+  border-radius: 25px;
+}
+.tab a{
+  width: 100%;
+  display: inline-block;
+  padding: 0.5em 0;
+  color: #FFF;
+  text-decoration: none;
+}
+.tab a:hover{
+  text-decoration: underline;
+}
+.tab a.active{
+  background: #FFF;
+  color: #74ccd1;
+  border-radius: 30px;
+}
 @media only screen and (min-width: 40em) {
   .bigsize{
     font-size: 3em;
