--- a/app/views/blends/_actions.html.erb
+++ b/app/views/blends/_actions.html.erb
@@ -10,17 +10,19 @@
 
       <% if @blend[:data].recipient === current_user %>
         <p class="Bubble"><%= @blend[:data].message %></p>
-        <%= link_to("Accept", blend_accept_path(@blend[:data].id), :method => :post, class:"Button") %>
-        <%= link_to("Refuse", blend_reject_path(@blend[:data].id), :method => :post, class:"Button") %>
+        <div class="clearfix blend-actions center">
+          <%= link_to("Accept", blend_accept_path(@blend[:data].id), :method => :post, class:"Button accept") %>
+          <%= link_to("Refuse", blend_reject_path(@blend[:data].id), :method => :post, class:"Button refuse") %>
+        </div>
       <% end %>
 
     <% elsif @blend[:data].status === "accepted" %>
-    <div class="details-box">
-      Yeaa 🎉 🎉 I accepted your blend!<br />
-      You can now chat with me at:
+    <div class="details-box center">
+      That's the spirit! 🎉 🎉<br>
+      Text/Call me now to meet up asap at:</br>
       <% if !@user.phone.empty? %>
-        <b><%= @user.phone %></b>
-        add me on whatzapp!!
+        <a href="tel:<%= @user.phone %>"><%= @user.phone %></a><br>
+        (PS: add me on WhatsApp 💬)
       <% else %>
         <a href="mailto:<%= @user.email %>"><%= @user.email %></a>
       <% end %>
