--- a/app/views/wizard/index.html.erb
+++ b/app/views/wizard/index.html.erb
@@ -1,6 +1,11 @@
 <section class="EditProfile clearfix">
   <div class="sm-col-6 lg-col-6 mx-auto">
-    <h3>Hi <%= @user.name %><br> Before you can meet people through Blendin we need some information. The more you complete your profile the better matches you will find.</h3>
+    <% if @user.sign_in_count == 1 %>
+      <h3>Hi <%= @user.name  %><br> Before you can meet people through Blendin we need some information. The more you complete your profile the better matches you will find.</h3>
+    <% else %>
+      <%= render 'top_nav' %>
+    <% end %>
+
     <%= form_for(@user, html: {id:'wizard-form-js'}) do |f| %>
 
       <label class="Label">Please select an option:</label>
