--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,14 +1,165 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
       /* Email styles need to be inline */
     </style>
-  </head>
+  </head> -->
+  <html xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width"/>
 
+    <!-- For development, pass document through inliner -->
+    <!-- <link rel="stylesheet" href="css/simple.css"> -->
+  <script src="https://use.fontawesome.com/c2445626d8.js"></script>
+
+    <style type="text/css">
+    * {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  /*line-height: 1.65; */
+  }
+
+img {
+  max-width: 100%;
+  margin: 0 auto;
+  display: block; }
+
+body,
+.body-wrap {
+  width: 100% !important;
+  height: 100%;
+  background: #efefef;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: none; }
+
+a {
+  color: #74CCD1;
+  text-decoration: none; }
+
+.text-center {
+  text-align: center; }
+
+.text-right {
+  text-align: right; }
+
+.text-left {
+  text-align: left; }
+
+.button {
+  display: inline-block;
+  color: white;
+  background: #74CCD1;
+  border: solid #74CCD1;
+  border-width: 10px 20px 8px;
+  font-weight: bold;
+  border-radius: 4px; }
+
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 20px;
+  line-height: 1.25;
+  color: #3e3e3e;}
+
+h1 {
+  font-size: 22px; }
+
+h2 {
+  font-size: 18px; }
+
+h3 {
+  font-size: 24px; }
+
+h4 {
+  font-size: 20px; }
+
+h5 {
+  font-size: 16px; }
+
+p, ul, ol {
+  font-size: 16px;
+  font-weight: normal;
+  margin-bottom: 20px; }
+
+strong {
+  color #3e3e3e;
+}
+
+.container {
+  display: block !important;
+  clear: both !important;
+  margin: 0 auto !important;
+  max-width: 580px !important; }
+  .container table {
+    width: 100% !important;
+    border-collapse: collapse; }
+  .container .masthead {
+    padding: 40px 0;
+    background: white;
+    border-bottom: solid 3px #71c3c7;
+    color: white; }
+    .container .masthead h1 {
+      margin: 0 auto !important;
+      max-width: 90%;
+      text-transform: uppercase; }
+  .container .content {
+    background: white;
+    padding: 30px 35px; }
+    .container .content.footer {
+      background: none; }
+      .container .content.footer p {
+        margin-bottom: 0;
+        color: #888;
+        text-align: center;
+        font-size: 14px; }
+      .container .content.footer a {
+        color: #888;
+        text-decoration: none;
+        font-weight: bold; }
+    </style>
+</head>
   <body>
-  	<p><%= image_tag("logo-app.png", size: "130x29") %></p>
+  <!-- header start -->
+  <table class="body-wrap">
+      <tr>
+          <td class="container">
+            <table>
+                <tr>
+                    <td align="center" class="masthead">
+
+                      <p><%= image_tag("logo-app.png", size: "130x29") %></p>
+
+                    </td>
+                </tr>
+                <tr>
+                    <td class="content">
+  	<!-- <p><%= image_tag("logo-app.png", size: "130x29") %></p> -->
+    <!-- email content start -->
     <%= yield %>
+  <!-- footer start -->
+</td>
+</tr>
+<tr>
+<td class="container">
+
+    <!-- footer start -->
+  </td>
+</tr>
+</table>
+    <table>
+        <tr>
+            <td class="content footer" align="center">
+                <p>Sent by <a href="#">Blendin</a>, Tweede Jan van der Heijdenstraat 67-3, 1074 XR</p>
+                <p><a href="mailto:">info@blendinnow.nl</a> | <a href="#">Unsubscribe</a></p>
+            </td>
+        </tr>
+    </table>
+
+</td>
+</tr>
+</table>
   </body>
 </html>
