send request, accepted and rejected Blend email

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -119,6 +119,12 @@ strong {
         color: #888;
         text-decoration: none;
         font-weight: bold; }
+  #avatar {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    display: unset;
+  }
     </style>
 </head>
   <body>
