--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,74 +1,47 @@
-<!-- <table class="body-wrap">
+<h2>Welcome
+    <%= @user.username %>,</h2>
+
+<p>We account is confirm and is read to Blend. Connecting with newcomers/locals has never been easier.</p>
+
+<p>
+    <strong>Get start with 3 simples steps:</strong>
+</p>
+
+<table>
     <tr>
-        <td class="container"> -->
-
-            <!-- Message start -->
-            <!-- <table>
-                <tr>
-                    <td align="center" class="masthead">
-
-                      <p><%= image_tag("logo-app.png", size: "130x29") %></p>
-
-                    </td>
-                </tr>
-                <tr>
-                    <td class="content"> -->
-
-                        <h2>Welcome <%= @user.username %>,</h2>
-
-                        <p>We account is confirm and is read to Blend. Connecting with newcomers/locals has never been easier.</p>
-
-
-                        <p><strong>Get start with 3 simples steps:</strong></p>
-
-                        <table>
-                            <tr>
-                                <td align="">
-                                    <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></p>
-                                </td>
-                                <td align="left">
-                                    <strong style="color: #3e3e3e;">Complete your profile</strong><br>
-                                    Describe your personal interests, work experience & contact info. <%= link_to 'Complete now!', user_url(@user) %>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="">
-                                    <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;"><i class="fa fa-camera-retro" aria-hidden="true"></i></p>
-                                </td>
-                                <td align="left">
-                                    <strong style="color: #3e3e3e;">Uplaod a profile picture</strong><br>
-                                    Personalize your profile and help people reconize you. <%= link_to 'Uplaod photo', '#' %>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td align="">
-                                    <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;"><i class="fa fa-users" aria-hidden="true"></i></p>
-                                </td>
-                                <td align="left">
-                                    <strong style="color: #3e3e3e;">Blendin!</strong><br>
-                                    Find newcomers/locals with the same interests and age as you. <%= link_to 'Get started!', root_url %>
-                                </td>
-                            </tr>
-                        </table>
-                    <!-- </td>
-                </tr>
-            </table> -->
-
-        <!-- </td>
-    </tr>
-    <tr>
-        <td class="container"> -->
-
-            <!-- footer start -->
-            <!-- <table>
-                <tr>
-                    <td class="content footer" align="center">
-                        <p>Sent by <a href="#">Blendin</a>, Tweede Jan van der Heijdenstraat 67-3, 1074 XR</p>
-                        <p><a href="mailto:">info@blendinnow.nl</a> | <a href="#">Unsubscribe</a></p>
-                    </td>
-                </tr>
-            </table>
-
+        <td align="">
+            <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+            </p>
+        </td>
+        <td align="left">
+            <strong style="color: #3e3e3e;">Complete your profile</strong><br>
+            Describe your personal interests, work experience & contact info.
+            <%= link_to 'Complete now!', user_url(@user) %>
         </td>
     </tr>
-</table> -->
+    <tr>
+        <td align="">
+            <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+                <i class="fa fa-camera-retro" aria-hidden="true"></i>
+            </p>
+        </td>
+        <td align="left">
+            <strong style="color: #3e3e3e;">Uplaod a profile picture</strong><br>
+            Personalize your profile and help people reconize you.
+            <%= link_to 'Uplaod photo', '#' %>
+        </td>
+    </tr>
+    <tr>
+        <td align="">
+            <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+                <i class="fa fa-users" aria-hidden="true"></i>
+            </p>
+        </td>
+        <td align="left">
+            <strong style="color: #3e3e3e;">Blendin!</strong><br>
+            Find newcomers/locals with the same interests and age as you.
+            <%= link_to 'Get started!', root_url %>
+        </td>
+    </tr>
+</table>
