--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -13,7 +13,7 @@
     </td>
     <td align="left">
       <strong style="color: #3e3e3e;">Complete your profile</strong><br> Describe your personal interests, work experience & contact info.
-      <%= link_to 'Complete now!', wizard_path %>
+      <%= link_to 'Complete now!', wizard_url %>
     </td>
   </tr>
   <tr>
@@ -24,7 +24,7 @@
     </td>
     <td align="left">
       <strong style="color: #3e3e3e;">Uplaod a profile picture</strong><br> Personalize your profile and help people reconize you.
-      <%= link_to 'Uplaod photo', upload_photo_path %>
+      <%= link_to 'Uplaod photo', upload_photo_url %>
     </td>
   </tr>
   <tr>
