update with merge and solve some conflict

--- a/app/views/blends/_actions.html.erb
+++ b/app/views/blends/_actions.html.erb
@@ -1,4 +1,4 @@
-<% if @blend[:data].status != "rejected" %>
+<% if @blend[:data].status != "declined" %>
 
   <% if @blend[:data].status === "pending" %>
 
