--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,11 @@
 <section class="Cards CardsContainer">
-  <% @users.each do |user| %>
-    <%= render 'users/card', user: user %>
-  <% end %>
+    <% @users.each do |user| %>
+      <%= render 'users/card', user: user %>
+    <% end %>
 </section>
+<div class="clearfix center col-12">
+  <div class="paginate-link">
+    <%= link_to_prev_page @users, '< 🚶 Prev' %>
+    <%= link_to_next_page @users, 'Next 🤔 >' %>
+  </div>
+</div>
