--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -83,6 +83,15 @@ label{
   color: #74ccd1;
   border-radius: 30px;
 }
+.paginate-link{
+  margin: 0em 0 3em 0;
+}
+.paginate-link a{
+  padding: 0.2em 1em;
+  margin: 0 0.5em;
+  text-decoration: none;
+  font-size: 1.3em;
+}
 @media only screen and (min-width: 40em) {
   .bigsize{
     font-size: 3em;
