--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,15 @@
-<h2>Forgot your password?</h2>
+<section class="Auth clearfix flex items-center">
+    <div class="sm-col-6 lg-col-3 mx-auto">
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <h2 class="center">Forgot your password?</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= devise_error_messages! %>
+        <%= f.email_field :email, autofocus: true, class:"Input", placeholder:"Type your email address"  %>
+        <%= f.submit "Send reset link", class: "Button center" %>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
