--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,7 @@
 <section class="Cards CardsContainer">
+    <% if @users.empty? %>
+      <p class="center">We couldn't find any possible match close to you<br>we are currently based in the Netherlads if you wish to take blendin in your country please write us at: <a href="mailto:info@blendinnow.nl">info@blendinnow.nl</a></p>
+    <% end %>
     <% @users.each do |user| %>
       <%= render 'users/card', user: user %>
     <% end %>
