fix placeholder color and text details

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -200,3 +200,20 @@ select{
   color: #ed6363;
   font-size: 0.9em;
 }
+
+ /*Input Placeholder style*/
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+  opacity:  0.3;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   opacity:  0.3;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  opacity:  0.3;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   opacity:  0.3;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   opacity:  0.3;
+}
