--- a/app/views/blends/_actions.html.erb
+++ b/app/views/blends/_actions.html.erb
@@ -29,6 +29,6 @@
 
   <% else %>
     <div class="details-box center">
-      Blend refused 😞. Not really a big deal our community is big and we have a planties of other bleders just find wating. Good luck! <br />
+      Blend refused 😞. Not really a big deal our community is big and we have a planties of other bleders.<br />
     </div>
   <% end %>
