turn emojis to img

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,8 +7,8 @@
 <table>
   <tr>
     <td>
-      <p style="margin: 0;padding:0 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        ✅
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+        <%= image_tag "check_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
@@ -18,8 +18,8 @@
   </tr>
   <tr>
     <td>
-      <p style="margin: 0;padding:0 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        📸
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+        <%= image_tag "camera_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
@@ -29,8 +29,8 @@
   </tr>
   <tr>
     <td>
-      <p style="margin: 0;padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        😃
+      <p style="margin: 0;padding:10px 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+        <%= image_tag "smile_emoji.png", style: 'max-width: unset'%>
       </p>
     </td>
     <td align="left">
