--- a/app/views/blend_mailer/blend_accepted_email.html.erb
+++ b/app/views/blend_mailer/blend_accepted_email.html.erb
@@ -1,21 +1,21 @@
-<h2 style="margin: 0;padding: 0;font-size: 18px;font-family: 'Quicksand', sans-serif;margin-bottom: 20px;line-height: 1.25;color: #333333;"><%= @sender.username %>, your Blend resquest was accepted!</h2>
-<p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"> Get in touch with <%= @recipient.username %> and start blending.</p>
-<table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
-  <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-      <td style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
-          <p style="padding: 0 20px;text-align: right;font-size: 2rem;color: #71c3c7;margin: 0;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;">
+<h2 style="margin: 0;padding: 0;font-size: 18px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;margin-bottom: 20px;line-height: 1.25;color: #3e3e3e;"><%= @sender.username %>, your Blend resquest was accepted!</h2>
+<p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 20px;"> Get in touch with <%= @recipient.username %> and start blending.</p>
+<table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;border-collapse: collapse;width: 100% !important;">
+  <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
+      <td style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
+          <p style="padding: 0 20px;text-align: right;font-size: 2rem;color: #71c3c7;margin: 0;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 20px;">
               <%= image_tag(@recipient.avatar, id: 'avatar')%>
           </p>
       </td>
-      <td align="left" style="max-width: 380px;margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+      <td align="left" style="max-width: 380px;margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
         <% if !@recipient.phone.empty? %>
-          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;">That's the spirit! Call me to arrange a meet-up as soon as possible at:<br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><%= @recipient.phone %></p>
+          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 20px;">That's the spirit! Call me to arrange a meet-up as soon as possible at:<br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;"><%= @recipient.phone %></p>
         <% else %>
-          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;">That's the spirit! Text me to arrange a meet-up as soon as possible at:<br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;"><a href="mailto:&lt;%= @recipient.email %&gt;" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #74CCD1;text-decoration: none;"><%= @recipient.email %></a></p>
+          <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;font-weight: normal;margin-bottom: 20px;">That's the spirit! Text me to arrange a meet-up as soon as possible at:<br style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;"><a href="mailto:&lt;%= @recipient.email %&gt;" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;color: #74CCD1;text-decoration: none;"><%= @recipient.email %></a></p>
         <% end %>
       </td>
   </tr>
 </table>
-<div align="center" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+<div align="center" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Avenir Next', &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;">
   <%= link_to 'See full profile', user_url(@recipient), class: 'button' %>
 </div>
