--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,34 +7,34 @@
 <table>
   <tr>
     <td>
-      <p style="margin: 0;padding:10px 20px;position: relative;color: #71c3c7;">
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
         <%= image_tag "check_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #333333;">Complete your profile</strong><br> Describe your personal interests, work experience & contact info.
+      <strong style="color: #3e3e3e;">Complete your profile</strong><br> Describe your personal interests, work experience & contact info.
       <%= link_to 'Complete now!', wizard_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
   <tr>
     <td>
-      <p style="margin: 0;padding:10px 20px;position: relative;color: #71c3c7;">
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
         <%= image_tag "camera_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #333333;">Uplaod a profile picture</strong><br> Personalize your profile and help people reconize you.
+      <strong style="color: #3e3e3e;">Uplaod a profile picture</strong><br> Personalize your profile and help people reconize you.
       <%= link_to 'Uplaod photo', upload_photo_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
   <tr>
     <td>
-      <p style="margin: 0;padding:10px 20px;position: relative;color: #71c3c7;">
+      <p style="margin: 0;padding:10px 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
         <%= image_tag "smile_emoji.png", style: 'max-width: unset'%>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #333333;">Blendin!</strong><br> Find newcomers/locals with the same interests and age as you.
+      <strong style="color: #3e3e3e;">Blendin!</strong><br> Find newcomers/locals with the same interests and age as you.
       <%= link_to 'Get started!', root_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
