--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "I've alredy an account", new_session_path(resource_name), class: "Link" %><br />
+  <%= link_to "I have already an account", new_session_path(resource_name), class: "Link" %><br />
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
