--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,36 +6,36 @@
 
 <table>
   <tr>
-    <td align="">
-      <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+    <td>
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+        <%= image_tag "check_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #3e3e3e;">Complete your profile</strong><br> Describe your personal interests, work experience & contact info.
-      <%= link_to 'Complete now!', wizard_url %>
+      <strong style="color: #333333;">Complete your profile</strong><br> Describe your personal interests, work experience & contact info.
+      <%= link_to 'Complete now!', wizard_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
   <tr>
-    <td align="">
-      <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        <i class="fa fa-camera-retro" aria-hidden="true"></i>
+    <td>
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+        <%= image_tag "camera_emoji.png", style: 'max-width: unset' %>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #3e3e3e;">Uplaod a profile picture</strong><br> Personalize your profile and help people reconize you.
-      <%= link_to 'Uplaod photo', upload_photo_url %>
+      <strong style="color: #333333;">Uplaod a profile picture</strong><br> Personalize your profile and help people reconize you.
+      <%= link_to 'Uplaod photo', upload_photo_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
   <tr>
-    <td align="">
-      <p style="padding:0 20px;font-size: 6rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
-        <i class="fa fa-users" aria-hidden="true"></i>
+    <td>
+      <p style="margin: 0;padding:10px 20px;font-size: 5rem;position: relative;/* top: 21px; */margin-bottom: 0px;color: #71c3c7;">
+        <%= image_tag "smile_emoji.png", style: 'max-width: unset'%>
       </p>
     </td>
     <td align="left">
-      <strong style="color: #3e3e3e;">Blendin!</strong><br> Find newcomers/locals with the same interests and age as you.
-      <%= link_to 'Get started!', root_url %>
+      <strong style="color: #333333;">Blendin!</strong><br> Find newcomers/locals with the same interests and age as you.
+      <%= link_to 'Get started!', root_url, {style: 'color: #74CCD1; text-decoration: none;'} %>
     </td>
   </tr>
 </table>
