--- a/app/views/blends/_actions.html.erb
+++ b/app/views/blends/_actions.html.erb
@@ -1,4 +1,4 @@
-<% if @blend[:data].status != "rejected" %>
+<% if @blend[:data].status != "declined" %>
 
   <% if @blend[:data].status === "pending" %>
 
@@ -29,6 +29,6 @@
 
   <% else %>
     <div class="details-box center">
-      Blend refused 😞. Not really a big deal our community is big and we have a planties of other bleders just find wating. Good luck! <br />
+      Blend refused 😞. Not really a big deal our community is big and we have a planties of other bleders.<br />
     </div>
   <% end %>
