--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,183 +1,173 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width" />
-  <style type="text/css">
-    * {
-      margin: 0;
-      padding: 0;
-      font-size: 100%;
-      font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
-    }
+<html style="margin: 0;padding: 0">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width">
+    <style type="text/css">
+      * {
+        margin: 0;
+        padding: 0;
+        font-size: 100%;
+        font-family: 'Avenir Next', "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      }
+      img {
+        max-width: 100%;
+        margin: 0 auto;
+        display: block;
+      }
+      .body-wrap,
+      body {
+        width: 100% !important;
+        height: 100%;
+        background: #efefef;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-size-adjust: none;
+      }
+      a {
+        color: #74CCD1;
+        text-decoration: none;
+      }
+      .text-center {
+        text-align: center;
+      }
+      .text-right {
+        text-align: right;
+      }
+      .text-left {
+        text-align: left;
+      }
+      .button {
+        display: inline-block;
+        color: white;
+        background: #74CCD1;
+        border: solid #74CCD1;
+        border-width: 10px 20px 8px;
+        font-weight: bold;
+        border-radius: 4px;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin-bottom: 20px;
+        line-height: 1.25;
+        color: #333333;
+      }
+      h1 {
+        font-size: 22px;
+      }
+      h2 {
+        font-size: 18px;
+      }
+      h3 {
+        font-size: 24px;
+      }
+      h4 {
+        font-size: 20px;
+      }
+      h5 {
+        font-size: 16px;
+      }
+      ol,
+      p,
+      ul {
+        font-size: 16px;
+        font-weight: normal;
+        margin-bottom: 20px;
+      }
+      strong {
+        color #333333;
+      }
+      .container {
+        display: block !important;
+        clear: both !important;
+        margin: 0 auto !important;
+        max-width: 580px !important;
+      }
+      .container table {
+        width: 100% !important;
+        border-collapse: collapse;
+      }
+      .container .masthead {
+        padding: 40px 0;
+        background: white;
+        border-bottom: solid 3px #71c3c7;
+        color: white;
+      }
+      .container .masthead h1 {
+        margin: 0 auto !important;
+        max-width: 90%;
+        text-transform: uppercase;
+      }
+      .container .content {
+        background: white;
+        padding: 30px 35px;
+      }
+      .container .content.footer {
+        background: none;
+      }
+      .container .content.footer p {
+        margin-bottom: 0;
+        color: #888;
+        text-align: center;
+        font-size: 14px;
+      }
+      .container .content.footer a {
+        color: #888;
+        text-decoration: none;
+        font-weight: bold;
+      }
+      #avatar {
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        display: unset;
+      }
+      .username {
+        font-size: 13px;
+      }
 
-    img {
-      max-width: 100%;
-      margin: 0 auto;
-      display: block;
-    }
-
-    body,
-    .body-wrap {
-      width: 100% !important;
-      height: 100%;
-      background: #efefef;
-      -webkit-font-smoothing: antialiased;
-      -webkit-text-size-adjust: none;
-    }
-
-    a {
-      color: #74CCD1;
-      text-decoration: none;
-    }
-
-    .text-center {
-      text-align: center;
-    }
-
-    .text-right {
-      text-align: right;
-    }
-
-    .text-left {
-      text-align: left;
-    }
-
-    .button {
-      display: inline-block;
-      color: white;
-      background: #74CCD1;
-      border: solid #74CCD1;
-      border-width: 10px 20px 8px;
-      font-weight: bold;
-      border-radius: 4px;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      margin-bottom: 20px;
-      line-height: 1.25;
-      color: #3e3e3e;
-    }
-
-    h1 {
-      font-size: 22px;
-    }
-
-    h2 {
-      font-size: 18px;
-    }
-
-    h3 {
-      font-size: 24px;
-    }
-
-    h4 {
-      font-size: 20px;
-    }
-
-    h5 {
-      font-size: 16px;
-    }
-
-    p,
-    ul,
-    ol {
-      font-size: 16px;
-      font-weight: normal;
-      margin-bottom: 20px;
-    }
-
-    strong {
-      color #3e3e3e;
-    }
-
-    .container {
-      display: block !important;
-      clear: both !important;
-      margin: 0 auto !important;
-      max-width: 580px !important;
-    }
-
-    .container table {
-      width: 100% !important;
-      border-collapse: collapse;
-    }
-
-    .container .masthead {
-      padding: 40px 0;
-      background: white;
-      border-bottom: solid 3px #71c3c7;
-      color: white;
-    }
-
-    .container .masthead h1 {
-      margin: 0 auto !important;
-      max-width: 90%;
-      text-transform: uppercase;
-    }
-
-    .container .content {
-      background: white;
-      padding: 30px 35px;
-    }
-
-    .container .content.footer {
-      background: none;
-    }
-
-    .container .content.footer p {
-      margin-bottom: 0;
-      color: #888;
-      text-align: center;
-      font-size: 14px;
-    }
-
-    .container .content.footer a {
-      color: #888;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    #avatar {
-      width: 70px;
-      height: 70px;
-      border-radius: 50%;
-      display: unset;
-    }
-  </style>
-</head>
-
-<body>
-  <table class="body-wrap">
-    <tr>
-      <td class="container">
-        <table>
-          <tr>
-            <td align="center" class="masthead">
-              <p><%= image_tag("logo-app.png", size: "130x29") %></p>
-            </td>
-          </tr>
-          <tr>
-            <td class="content">
-              <%= yield %>
-            </td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <td class="content footer" align="center">
-              <p>Sent by <a href="#">Blendin</a>, Tweede Jan van der Heijdenstraat 67-3, 1074 XR</p>
-              <p><a href="mailto:info@blendinnow.nl">info@blendinnow.nl</a></p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-</body>
+    </style>
+  </head>
+  <body
+    style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
+    <table
+      class="body-wrap"
+      style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;height: 100%;background: #efefef;-webkit-font-smoothing: antialiased;-webkit-text-size-adjust: none;width: 100% !important;">
+      <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+        <td
+          class="container"
+          style="margin: 0 auto !important;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;display: block !important;clear: both !important;max-width: 580px !important;">
+          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
+            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+              <td
+                align="center"
+                class="masthead"
+                style="margin: 0;padding: 40px 0;font-size: 100%;font-family: 'Quicksand', sans-serif;background: white;border-bottom: solid 3px #71c3c7;color: white;">
+                <p style="margin: 0;padding: 0;font-size: 16px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 20px;"><%= image_tag("logo-app.png", size: "130x29") %></p>
+              </td>
+            </tr>
+            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+              <td class="content" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: white;">
+                <%= yield %>
+              </td>
+            </tr>
+          </table>
+          <table style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;border-collapse: collapse;width: 100% !important;">
+            <tr style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;">
+              <td class="content footer" align="center" style="margin: 0;padding: 30px 35px;font-size: 100%;font-family: 'Quicksand', sans-serif;background: none;">
+                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">Sent by
+                  <a href="#" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">Blendin</a>, <a style="color: #888;text-decoration: none;">Tweede Jan van der Heijdenstraat 67-3, 1074 XR</a></p>
+                <p style="margin: 0;padding: 0;font-size: 14px;font-family: 'Quicksand', sans-serif;font-weight: normal;margin-bottom: 0;color: #888;text-align: center;">
+                  <a href="mailto:info@blendinnow.nl" style="margin: 0;padding: 0;font-size: 100%;font-family: 'Quicksand', sans-serif;color: #888;text-decoration: none;font-weight: bold;">info@blendinnow.nl</a>
+                </p>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
