--- a/app/views/wizard/index.html.erb
+++ b/app/views/wizard/index.html.erb
@@ -1,7 +1,7 @@
 <section class="EditProfile clearfix">
   <div class="sm-col-6 lg-col-6 mx-auto">
     <% if @user.sign_in_count == 1 %>
-      <h3>Hi <%= @user.name  %><br> Before you can meet people through Blendin we need some information. The more you complete your profile the better matches you will find.</h3>
+      <h3>Hi <%= @user.name  %>,<br> Before you can meet people through Blendin we need some information. The more you complete your profile the better matches you will find.</h3>
     <% else %>
       <%= render 'top_nav' %>
     <% end %>
@@ -33,13 +33,13 @@
       </label>
 
       <label class="Label">🎂 Date of Birth:</label>
-      <%= f.date_select :birthday, {start_year: 1960, end_year: 2000, :order => [:day, :month, :year]}, { class: 'Input Select' , required: true} %>
+      <%= f.date_select :birthday, {start_year: 1960, end_year: 2000, :order => [:day, :month, :year], prompt: true}, { class: 'Input Select' , required: true} %>
 
       <label class="Label">🌇 Where do you live?</label>
-      <%= f.text_field :full_street_address, class:"Input AddressField", required: true, placeholder: "Amsterdam, Netherlands" %>
+      <%= f.text_field :full_street_address, class:"Input AddressField", required: true, placeholder: "Ex. Amsterdam, Netherlands" %>
 
       <label class="Label">🇸🇾 🇳🇱 Country of origin:</label>
-      <%= f.text_field :country, id:"country-js", class:"Input AddressField", placeholder: "Syria" %>
+      <%= f.text_field :country, id:"country-js", class:"Input AddressField", placeholder: "Ex. Syria" %>
 
       <label class="Label">📙 Choose your interest from the list: </label>
       <select name="user[tag_list][]" id="taglist-js"  multiple required>
@@ -50,12 +50,12 @@
       <i>(Choose at least three interest form the list. The more the better.) </i>
 
       <label class="Label">💪 Study and/or work experience:</label>
-      <%= f.text_field :job, class: "Input", placeholder:"Car engineer or lawyer" %>
+      <%= f.text_field :job, class: "Input", placeholder:"Ex. Car engineer or lawyer" %>
       <i>(This could be your previous job/study.) </i>
 
 
       <label class="Label">📱 Phone number:</label>
-      <%= f.text_field :phone, required: 'true', class: "Input", required: true, placeholder:"0612345678", 'data-parsley-trigger' => "change",  'data-parsley-type' => "number", 'data-parsley-maxlength' =>"10" %>
+      <%= f.text_field :phone, required: 'true', class: "Input", required: true, placeholder:"Ex. 0612345678", 'data-parsley-trigger' => "change",  'data-parsley-type' => "number", 'data-parsley-maxlength' =>"10" %>
 
       <label class="Label">💬 Tell more about yourself: </label>
       <%= f.text_area :about, class:"Input" %>
